<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerHome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/clTab"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home_feed_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".33" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPokemonList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home_pokemon_list_button"
            app:layout_constraintStart_toEndOf="@id/btnFeed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".33" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSetting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home_pokemon_button"
            app:layout_constraintStart_toEndOf="@id/btnPokemonList"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".33" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>