<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pokemondetail.detail.PokemonDetailFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPokemonImage"
        android:layout_width="@dimen/dp_160"
        android:layout_height="@dimen/dp_160"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        app:contentPadding="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPokemonImage"
        app:cardCornerRadius="@dimen/dp_08"
        app:cardElevation="@dimen/dp_08">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPokemonDetailNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_detail_detail_name_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPokemonDetailName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_08"
                app:layout_constraintBaseline_toBaselineOf="@id/tvPokemonDetailNameLabel"
                app:layout_constraintStart_toEndOf="@id/tvPokemonDetailNameLabel"
                tools:text="Pikachu" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPokemonDetailWeightLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_08"
                android:text="@string/pokemon_detail_detail_weight_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPokemonDetailNameLabel" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPokemonDetailWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_08"
                app:layout_constraintBaseline_toBaselineOf="@id/tvPokemonDetailWeightLabel"
                app:layout_constraintStart_toEndOf="@id/tvPokemonDetailWeightLabel"
                tools:text="123" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPokemonDetailHeightLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_08"
                android:text="@string/pokemon_detail_detail_height_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPokemonDetailWeightLabel" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPokemonDetailHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_08"
                app:layout_constraintBaseline_toBaselineOf="@id/tvPokemonDetailHeightLabel"
                app:layout_constraintStart_toEndOf="@id/tvPokemonDetailHeightLabel"
                tools:text="123" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>